--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		
 		<link href="./_app/immutable/assets/0.38Qdzyty.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.C3TnBFuK.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DFYTY2Fz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Dt2qOB02.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BFL8mc3F.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CqVmDZYk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CtbWrGNo.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BcE6iFfg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.tEBwBs6Z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C4D7lu78.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.UALSTeWn.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CbzoAjiN.js">
@@ -21,7 +21,7 @@
 			
 			<script>
 				{
-					__sveltekit_vkpdmh = {
+					__sveltekit_wc9jf9 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/sveltekit-gh-pages"
 					};
@@ -31,8 +31,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DFYTY2Fz.js"),
-						import("./_app/immutable/entry/app.BcE6iFfg.js")
+						import("./_app/immutable/entry/start.BFL8mc3F.js"),
+						import("./_app/immutable/entry/app.tEBwBs6Z.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
