--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		
 		<link href="./_app/immutable/assets/0.38Qdzyty.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.C3TnBFuK.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BFL8mc3F.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CqVmDZYk.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D5ibLmd9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.fjPBdp6E.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CtbWrGNo.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.tEBwBs6Z.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.mMpimq74.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C4D7lu78.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.UALSTeWn.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CbzoAjiN.js">
@@ -21,9 +21,9 @@
 			
 			<script>
 				{
-					__sveltekit_wc9jf9 = {
+					__sveltekit_1hutmyb = {
 						base: new URL(".", location).pathname.slice(0, -1),
-						assets: "/sveltekit-gh-pages"
+						assets: "/thatonedevil.github.io"
 					};
 
 					const element = document.currentScript.parentElement;
@@ -31,8 +31,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BFL8mc3F.js"),
-						import("./_app/immutable/entry/app.tEBwBs6Z.js")
+						import("./_app/immutable/entry/start.D5ibLmd9.js"),
+						import("./_app/immutable/entry/app.mMpimq74.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
