--- a/index.html
+++ b/index.html
@@ -2,26 +2,29 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A=="crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.38Qdzyty.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.C3TnBFuK.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D5ibLmd9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.fjPBdp6E.js">
+		<link href="./_app/immutable/assets/0.CnAuxfac.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.D6yENs35.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DOfB2DeC.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.HXe8F3bl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CtbWrGNo.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.mMpimq74.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C8VHEjpy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C4D7lu78.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.UALSTeWn.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CbzoAjiN.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.ChB-z_jS.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.xQkVgMNk.js">
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <h1 class="text-5xl font-bold " data-svelte-h="svelte-yfbljk">Epik cool website
-  </h1> 
+	<body data-sveltekit-preload-data="hover" class="bg-nafisa text-white relative">
+		<div style="display: contents" class="relative z-[1]">  <div class="matte-black svelte-1viaf3m" data-svelte-h="svelte-e0sms6"><div class="pulsing-border svelte-1viaf3m"><h1 class="text-4xl font-bold svelte-1viaf3m">ThatOneDevil</h1> <p class="svelte-1viaf3m">Welcome to my portfolio</p> <p class="italic text-1xl svelte-1viaf3m">Im still learning</p> <div class="icon-box svelte-1viaf3m"><a href="https://github.com/thatonedevil" target="_blank" class="svelte-1viaf3m"><i class="fab fa-github svelte-1viaf3m"></i> <span class="svelte-1viaf3m">GitHub</span></a></div> <div class="icon-box svelte-1viaf3m"><i class="fab fa-discord svelte-1viaf3m"></i> <span class="svelte-1viaf3m">ThatOneDevil</span></div></div></div> 
 			
 			<script>
 				{
-					__sveltekit_1hutmyb = {
+					__sveltekit_1ni2gqg = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/thatonedevil.github.io"
 					};
@@ -31,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D5ibLmd9.js"),
-						import("./_app/immutable/entry/app.mMpimq74.js")
+						import("./_app/immutable/entry/start.DOfB2DeC.js"),
+						import("./_app/immutable/entry/app.C8VHEjpy.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
@@ -44,5 +47,13 @@
 				}
 			</script>
 		</div>
+		<div class="absolute min-h-screen top-0 left-0 w-full z-[-1] opacity-70">
+			<div class="absolute inset-0" id="particles-js"></div>
+		</div>
+		<script>
+			particlesJS.load('particles-js', 'assets/particles.json', function() {
+				console.log("Callback - particles.js loaded")
+			})
+		</script>
 	</body>
 </html>
