--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.CnAuxfac.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.D6yENs35.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DOfB2DeC.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.HXe8F3bl.js">
+		<link href="./_app/immutable/assets/2.JTnXbyi1.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CGfEe3r1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CfxPWq3t.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CtbWrGNo.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C8VHEjpy.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.YJDJGl_I.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C4D7lu78.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.ChB-z_jS.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.xQkVgMNk.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.CZwuZ63X.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-nafisa text-white relative">
-		<div style="display: contents" class="relative z-[1]">  <div class="matte-black svelte-1viaf3m" data-svelte-h="svelte-e0sms6"><div class="pulsing-border svelte-1viaf3m"><h1 class="text-4xl font-bold svelte-1viaf3m">ThatOneDevil</h1> <p class="svelte-1viaf3m">Welcome to my portfolio</p> <p class="italic text-1xl svelte-1viaf3m">Im still learning</p> <div class="icon-box svelte-1viaf3m"><a href="https://github.com/thatonedevil" target="_blank" class="svelte-1viaf3m"><i class="fab fa-github svelte-1viaf3m"></i> <span class="svelte-1viaf3m">GitHub</span></a></div> <div class="icon-box svelte-1viaf3m"><i class="fab fa-discord svelte-1viaf3m"></i> <span class="svelte-1viaf3m">ThatOneDevil</span></div></div></div> 
+		<div style="display: contents" class="relative z-[1]">  <div class="matte-black svelte-8glvl9" data-svelte-h="svelte-e0sms6"><div class="pulsing-border svelte-8glvl9"><h1 class="text-4xl font-bold svelte-8glvl9">ThatOneDevil</h1> <p class="svelte-8glvl9">Welcome to my portfolio</p> <p class="italic text-1xl svelte-8glvl9">Im still learning</p> <div class="icon-box svelte-8glvl9"><a href="https://github.com/thatonedevil" target="_blank" class="svelte-8glvl9"><i class="fab fa-github svelte-8glvl9"></i> <span class="svelte-8glvl9">GitHub</span></a></div> <div class="icon-box svelte-8glvl9"><i class="fab fa-discord svelte-8glvl9"></i> <span class="svelte-8glvl9">ThatOneDevil</span></div></div></div> 
 			
 			<script>
 				{
-					__sveltekit_1ni2gqg = {
+					__sveltekit_kopxb2 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/thatonedevil.github.io"
 					};
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DOfB2DeC.js"),
-						import("./_app/immutable/entry/app.C8VHEjpy.js")
+						import("./_app/immutable/entry/start.CGfEe3r1.js"),
+						import("./_app/immutable/entry/app.YJDJGl_I.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
