--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.CnAuxfac.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.JTnXbyi1.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CGfEe3r1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CfxPWq3t.js">
+		<link href="./_app/immutable/assets/0.BbW8L3cO.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.DfAyomvy.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.nKgIul_U.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CEAumJvB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CtbWrGNo.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.YJDJGl_I.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BmSFFjs4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C4D7lu78.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.ChB-z_jS.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CZwuZ63X.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BuzRXaCB.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Dj8kiC59.js">
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-nafisa text-white relative">
-		<div style="display: contents" class="relative z-[1]">  <div class="matte-black svelte-8glvl9" data-svelte-h="svelte-e0sms6"><div class="pulsing-border svelte-8glvl9"><h1 class="text-4xl font-bold svelte-8glvl9">ThatOneDevil</h1> <p class="svelte-8glvl9">Welcome to my portfolio</p> <p class="italic text-1xl svelte-8glvl9">Im still learning</p> <div class="icon-box svelte-8glvl9"><a href="https://github.com/thatonedevil" target="_blank" class="svelte-8glvl9"><i class="fab fa-github svelte-8glvl9"></i> <span class="svelte-8glvl9">GitHub</span></a></div> <div class="icon-box svelte-8glvl9"><i class="fab fa-discord svelte-8glvl9"></i> <span class="svelte-8glvl9">ThatOneDevil</span></div></div></div> 
+	<body data-sveltekit-preload-data="hover" class="bg-hot-pink text-white relative">
+		<div style="display: contents" class="relative z-[1]">  <div class="background svelte-1gw2vpq" data-svelte-h="svelte-14c8yux"><div class="pulsing-border svelte-1gw2vpq"><h1 class="bg-gradient-to-r from-teal-500 via-purple-500 to-orange-500 bg-clip-text text-transparent font-black text-4xl svelte-1gw2vpq">ThatOneDevil</h1> <p class="svelte-1gw2vpq">Welcome to my portfolio</p> <p class="italic text-1xl svelte-1gw2vpq">Im still learning</p> <div class="icon-box svelte-1gw2vpq"><a href="https://github.com/thatonedevil" target="_blank" class="svelte-1gw2vpq"><i class="fab fa-github svelte-1gw2vpq"></i> <span class="svelte-1gw2vpq">GitHub</span></a></div> <div class="icon-box svelte-1gw2vpq"><a href="https://discord.com/users/422434919311212544" target="_blank" class="svelte-1gw2vpq"><i class="fab fa-discord svelte-1gw2vpq"></i> <span class="svelte-1gw2vpq">ThatOneDevil</span></a></div> <div class="icon-box svelte-1gw2vpq"><a href="https://github.com/ThatOneDevil/thatonedevil.github.io" target="_blank" class="svelte-1gw2vpq"><i class="fab fa-github svelte-1gw2vpq"></i> <span class="svelte-1gw2vpq">Source Code</span></a></div></div></div> 
 			
 			<script>
 				{
-					__sveltekit_kopxb2 = {
+					__sveltekit_6ny7mc = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/thatonedevil.github.io"
 					};
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CGfEe3r1.js"),
-						import("./_app/immutable/entry/app.YJDJGl_I.js")
+						import("./_app/immutable/entry/start.nKgIul_U.js"),
+						import("./_app/immutable/entry/app.BmSFFjs4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
